<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bash.im</string>
    <string name="hello_world">Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
        Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world!
    </string>
    <string name="action_settings">Settings</string>
    <string name="loadmore">Загрузить</string>
    <string name="clear">Очистить БД</string>
    <string name="release_to_refresh">Обновить</string>
    <string name="loading">Загружаем...</string>
    <string name="acton_clean_cache">Очистить кеш</string>
    <string name="quote">Цитата #</string>
    <string name="title_activity_quote">Цитата</string>
    <string name="share">Поделиться</string>
    <string name="author">Автор: Алексей Моисеев</string>
    <string name="version">Версия: 1.4 от 27 ноября 2014 года</string>
    <string name="link_to_club"><a href="https://vk.com/bashorgruclub">vk.com/bashorgruclub</a></string>
    <string name="action_about">О приложении</string>
    <string name="link_to_github">Исходный код приложения: <a href="https://github.com/alexeimoisseev/bashim">github.com/alexeimoisseev/bashim</a></string>
    <string name="notification_newquotes">Доступны новые цитаты</string>
    <string name="title_activity_comics">Комиксы</string>
    <string name="title_activity_comic_full_screen">Комикс</string>

</resources>
