<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alexeimoisseev.bashim.app.activities.AboutActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        />
    <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:textSize="18dp"
            android:autoLink="web"
            android:text="@string/link_to_club"
            android:paddingBottom="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginBottom="50dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link_to_github"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acton_clean_cache"
            android:onClick="clearDb"
            />
</LinearLayout>
