<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:onClick="clearDb"
            android:visibility="gone"
            />
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progress"/>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_view"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrPullLabel="@string/release_to_refresh"
            ptr:ptrRefreshLabel="@string/loading"
            ptr:ptrReleaseLabel="@string/release_to_refresh"
            >

    </com.handmark.pulltorefresh.library.PullToRefreshListView>

</LinearLayout>
